# tile-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain.toml
.github/workflows/: codegen-release.yml  coverage.yml  install-smoke.yml  toolchain-drift.yml
crates/rustc_codegen_tile/src/: mlir_parse.rs  mlir_to_aie.rs  mlir_to_bang.rs  mlir_to_csl.rs  mlir_to_gaudi.rs  mlir_to_gpu.rs  mlir_to_hexagon.rs  mlir_to_linalg.rs  mlir_to_msl.rs  mlir_to_musa.rs  mlir_to_nki.rs  mlir_to_pto.rs  mlir_to_spirv.rs  mlir_to_tpu.rs  mlir_to_ttmetal.rs
crates/tile_codegen/: Cargo.toml
crates/tile_codegen/src/: ascend.rs  emitters.rs  lib.rs  registry.rs  target.rs  targets.rs
crates/tile_hal/: Cargo.toml
crates/tile_hal/src/: ascend.rs  backend.rs  buffer.rs  cuda.rs  device.rs  error.rs  kernel.rs  lib.rs  stream.rs
crates/tile_spec/: Cargo.toml
crates/tile_spec/features/: backend_emit_purity.feature  core_op_lowering.feature  phase6_fusion_lowering.feature  registry_add_target.feature  tile_dsl_shapes.feature
crates/tile_spec/src/: gherkin.rs  lib.rs
crates/tile_spec/tests/: cucumber.rs
crates/tile_std/: Cargo.toml  build.rs
crates/tile_std/src/: buf.rs  core.rs  kernel_ops.rs  lib.rs  pipeline.rs  tile.rs
crates/tile_std_macros/: Cargo.toml
crates/tile_std_macros/src/: lib.rs
scripts/: coverage.sh  install.sh
